0.3.X ????
------------------------------------------------------------------
??-???-2006

    * Added wait for teh control to be active and configurable sleeps 
      after modifying actions (e.g. Select, Deselect, etc)

    * 


0.3.2 Fixed setup.py and some typos
------------------------------------------------------------------
31-Mar-2006

    * Fixed the spelling of Stefaan Himpe's name

    * Fixed setup.py which was working for creating a distribution but
      not for installing it (again thanks to Stefaan for pointing it out!)


0.3.1 Performance tune-ups
------------------------------------------------------------------
30-Mar-2006

    * Change calculation of distance in findbestmatch.GetNonTextControlName()
      so that it does not need to square or get the square root to
      find the real distance - as we only need to compare values - not have
      the actual distance. (Thanks to Stefaan Himpe)
    
    * Compiled regular expression patterns before doing the match to 
      avoid compiling the regular expression for window that is being
      tested (Thanks to Stefaan Himpe)
      
    * Made it easier to add your own control tests by adding a file 
      extra_tests.py which needs to export a ModifyRegisteredTests() method.
      Also cleaned up the code a little.
    
    * Updated notepad_fast.py to make it easier to profile (adde a method)

    * Changed WrapHandle to use a cache for classes it has matched - this is 
      to avoid having to match against all classes constantly.

    * Changed default timeout in SendMessageTimeout to .001 seconds from .4 
      seconds this results in a significant speedup. Will need to make this 
      value modifiable via the timing module/routine.

    * WaitNot was raising an error if the control was not found - it should 
      have returned (i.e. success - control is not in any particular state 
      because it does not exist!).

    * Added ListViewWrapper.Deselect() per Chistophe Keller's suggestion. 